--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     <!--  Header  -->
 
     <header class="page-header">
-      <div class="page-header__section container">
+      <div class="page-header__container container">
         <!-- Navigation -->
 
         <nav class="site-nav">
@@ -46,23 +46,19 @@
 
         <ul class="contact">
           <li class="contact__item">
-            <a href="mailto:info@devstudio.com" class="contact__info mail">
-              <div class="contact__box">
-                <svg class="contact__icon" width="16px" height="12px">
-                  <use href="./images/icons.svg#mail"></use>
-                </svg>
-                info@devstudio.com
-              </div>
+            <a href="mailto:info@devstudio.com" class="contact__link">
+              <svg class="contact__icon" width="16px" height="12px">
+                <use href="./images/icons.svg#mail"></use>
+              </svg>
+              info@devstudio.com
             </a>
           </li>
           <li class="contact__item">
-            <a href="tel:+38096111111" class="contact__info phone">
-              <div class="contact__box">
-                <svg class="contact__icon" width="10px" height="16px">
-                  <use href="./images/icons.svg#smartphone"></use>
-                </svg>
-                +38 096 111 11 11
-              </div>
+            <a href="tel:+38096111111" class="contact__link">
+              <svg class="contact__icon" width="10px" height="16px">
+                <use href="./images/icons.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11
             </a>
           </li>
         </ul>
