--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Header -->
 
     <header class="page-header">
-      <div class="page-header__section container">
+      <div class="page-header__container container">
         <!-- Navigation -->
 
         <nav class="site-nav">
@@ -48,23 +48,19 @@
 
         <ul class="contact">
           <li class="contact__item">
-            <a href="mailto:info@devstudio.com" class="contact__info mail">
-              <div class="contact__box">
-                <svg class="contact__icon" width="16px" height="12px">
-                  <use href="./images/icons.svg#mail"></use>
-                </svg>
-                info@devstudio.com
-              </div>
+            <a href="mailto:info@devstudio.com" class="contact__link">
+              <svg class="contact__icon" width="16px" height="12px">
+                <use href="./images/icons.svg#mail"></use>
+              </svg>
+              info@devstudio.com
             </a>
           </li>
           <li class="contact__item">
-            <a href="tel:+38096111111" class="contact__info phone">
-              <div class="contact__box">
-                <svg class="contact__icon" width="10px" height="16px">
-                  <use href="./images/icons.svg#smartphone"></use>
-                </svg>
-                +38 096 111 11 11
-              </div>
+            <a href="tel:+38096111111" class="contact__link">
+              <svg class="contact__icon" width="10px" height="16px">
+                <use href="./images/icons.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11
             </a>
           </li>
         </ul>
@@ -100,7 +96,7 @@
                 </svg>
               </div>
               <h3 class="features__title">Внимание к деталям</h3>
-              <p class="features__info">
+              <p class="features__text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
@@ -112,7 +108,7 @@
                 </svg>
               </div>
               <h3 class="features__title">Пунктуальность</h3>
-              <p class="features__info">
+              <p class="features__text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
@@ -124,7 +120,7 @@
                 </svg>
               </div>
               <h3 class="features__title">Планирование</h3>
-              <p class="features__info">
+              <p class="features__text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
@@ -136,7 +132,7 @@
                 </svg>
               </div>
               <h3 class="features__title">Современные технологии</h3>
-              <p class="features__info">
+              <p class="features__text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -147,7 +143,7 @@
 
       <!-- About us -->
 
-      <section class="section section--secondary">
+      <section class="section section--no-padding-top">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="about">
@@ -184,11 +180,11 @@
 
       <!--  Our team  -->
 
-      <section class="section section--background">
+      <section class="section section--team-background">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
-            <li class="team__card">
+            <li class="team__item">
               <article>
                 <div class="team__thumb">
                   <img
@@ -201,32 +197,32 @@
 
                 <div class="team__content">
                   <h3 class="team__title">Игорь Демьяненко</h3>
-                  <p class="team__info">Product Designer</p>
+                  <p class="team__text">Product Designer</p>
                   <ul class="social">
                     <li class="social__item">
                       <a href="https://www.instagram.com" class="social__link">
-                        <svg width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social__item">
                       <a href="https://www.twitter.com" class="social__link">
-                        <svg width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social__item">
                       <a href="https://www.facebook.com" class="social__link">
-                        <svg width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social__item">
                       <a href="https://www.linkedin.com" class="social__link">
-                        <svg width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#linkedin"></use>
                         </svg>
                       </a>
@@ -236,7 +232,7 @@
               </article>
             </li>
 
-            <li class="team__card">
+            <li class="team__item">
               <article>
                 <div class="team__thumb">
                   <img
@@ -249,32 +245,32 @@
 
                 <div class="team__content">
                   <h3 class="team__title">Ольга Репина</h3>
-                  <p class="team__info">Frontend Developer</p>
+                  <p class="team__text">Frontend Developer</p>
                   <ul class="social">
                     <li class="social__item">
                       <a href="https://www.instagram.com" class="social__link">
-                        <svg class="insta" width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social__item">
                       <a href="https://www.twitter.com" class="social__link">
-                        <svg class="" width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social__item">
                       <a href="https://www.facebook.com" class="social__link">
-                        <svg class="" width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social__item">
                       <a href="https://www.linkedin.com" class="social__link">
-                        <svg class="" width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#linkedin"></use>
                         </svg>
                       </a>
@@ -284,7 +280,7 @@
               </article>
             </li>
 
-            <li class="team__card">
+            <li class="team__item">
               <article>
                 <div class="team__thumb">
                   <img
@@ -297,32 +293,32 @@
 
                 <div class="team__content">
                   <h3 class="team__title">Николай Тарасов</h3>
-                  <p class="team__info">Marketing</p>
+                  <p class="team__text">Marketing</p>
                   <ul class="social">
                     <li class="social__item">
                       <a href="https://www.instagram.com" class="social__link">
-                        <svg class="insta" width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social__item">
                       <a href="https://www.twitter.com" class="social__link">
-                        <svg class="" width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social__item">
                       <a href="https://www.facebook.com" class="social__link">
-                        <svg class="" width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social__item">
                       <a href="https://www.linkedin.com" class="social__link">
-                        <svg class="" width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#linkedin"></use>
                         </svg>
                       </a>
@@ -332,7 +328,7 @@
               </article>
             </li>
 
-            <li class="team__card">
+            <li class="team__item">
               <article>
                 <div class="team__tumb">
                   <img
@@ -345,32 +341,32 @@
 
                 <div class="team__content">
                   <h3 class="team__title">Михаил Ермаков</h3>
-                  <p class="team__info">UI Designer</p>
+                  <p class="team__text">UI Designer</p>
                   <ul class="social">
                     <li class="social__item">
                       <a href="https://www.instagram.com" class="social__link">
-                        <svg class="" width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social__item">
                       <a href="https://www.twitter.com" class="social__link">
-                        <svg class="" width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social__item">
                       <a href="https://www.facebook.com" class="social__link">
-                        <svg class="" width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social__item">
                       <a href="https://www.linkedin.com" class="social__link">
-                        <svg class="" width="20" height="20">
+                        <svg class="team__icon" width="20" height="20">
                           <use href="./images/icons.svg#linkedin"></use>
                         </svg>
                       </a>
